--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "server": "json-server --watch src/assets/recipes.json --port 8000 --delay 500"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "@supabase/supabase-js": "^2.38.0",
     "fake-server": "^0.1.2",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
